--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
             <p>
                 Menerangkan potong sales Variance Plus / Lebih Setor fisik
             <p>
-                senilai : Rp. <input type="text; font-size: 14px;">  beri tanda " . " 
+                senilai : Rp. <input type="text"; font-size: 14px;**">  beri tanda " . " 
             <p>
                 tanggal sales
-                <input type="text" placeholder="DD-MM-YYYY" id="tanggal_kejadian" style="width: 100px;font-size: 14px;"> </p>
+                <input type="text" placeholder="DD-MM-YYYY" id="tanggal_kejadian" style="width: 100px;font-size: 14px;**"> </p>
             <p>
                 Dengan kronologi sbb :
             </p>
@@ -452,6 +452,7 @@ block;"></div>
     </script>
 </body>
 </html>
+
 
 
 
