--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         <div class="keterangan-section">
             <p>
-                Menerangkan potong sales Variance Plus / Lebih Setor fisik
+                Menerangkan potong sales Variance Plus 
             <p>
                 senilai : Rp. <input type="text" 
                                       id="nilai_sales" 
@@ -666,3 +666,4 @@
     </script>
 </body>
 </html>
+
